@@ -277,14 +277,6 @@ public class JlinkTask {
                 return EXIT_OK;
             }
 
-            if (options.modulePath.isEmpty()) {
-                // no --module-path specified - try to set $JAVA_HOME/jmods if that exists
-                Path jmods = getDefaultModulePath();
-                if (jmods != null) {
-                    options.modulePath.add(jmods);
-                }
-            }
-
             JlinkConfiguration config = initJlinkConfig();
             outputPath = config.getOutput();
             if (options.suggestProviders) {
@@ -377,8 +369,14 @@ public class JlinkTask {
     // the token for "all modules on the module path"
     private static final String ALL_MODULE_PATH = "ALL-MODULE-PATH";
     private JlinkConfiguration initJlinkConfig() throws BadArgs {
+        // Empty module path not allowed with ALL-MODULE-PATH in --add-modules
+        if (options.addMods.contains(ALL_MODULE_PATH) && options.modulePath.isEmpty()) {
+            throw taskHelper.newBadArgs("err.no.module.path");
+        }
+        List<Path> originalModulePath = new ArrayList<>(options.modulePath);
         ModuleFinder appModuleFinder = newModuleFinder(options.modulePath);
         ModuleFinder finder = appModuleFinder;
+
         boolean isLinkFromRuntime = false;
         if (!appModuleFinder.find("java.base").isPresent()) {
             // If the application module finder doesn't contain the
@@ -419,8 +417,30 @@ public class JlinkTask {
         Set<String> roots = new HashSet<>();
         for (String mod : options.addMods) {
             if (mod.equals(ALL_MODULE_PATH)) {
-                ModuleFinder mf = newLimitedFinder(finder, options.limitMods,
-                                              Set.of());
+                // all observable modules in the app module path are roots
+                Set<String> initialRoots = appModuleFinder.findAll()
+                        .stream()
+                        .map(ModuleReference::descriptor)
+                        .map(ModuleDescriptor::name)
+                        .collect(Collectors.toSet());
+
+                // Error if no module is found on the app module path
+                if (initialRoots.isEmpty()) {
+                    String modPath = originalModulePath.stream()
+                            .map(a -> a.toString())
+                            .collect(Collectors.joining(", "));
+                    throw taskHelper.newBadArgs("err.empty.module.path", modPath);
+                }
+
+                // Use a module finder with limited observability, as determined
+                // by initialRoots, to find the observable modules from the
+                // application module path (--module-path option) only. We must
+                // not include JDK modules from the default module path or the
+                // run-time image. Only do this if no --limit-modules has been
+                // specified to begin with.
+                ModuleFinder mf = newLimitedFinder(finder,
+                                                   options.limitMods.isEmpty() ? initialRoots : options.limitMods,
+                                                   Set.of());
                 mf.findAll()
                   .stream()
                   .map(ModuleReference::descriptor)
